--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,16 +3,35 @@ security:
   # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
   password_hashers:
     Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: "auto"
+    App\Entity\User:
+      algorithm: auto
+    App\Security\Users:
+      algorithm: auto
+    App\Entity\Users:
+      algorithm: auto
+
   # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
   providers:
-    users_in_memory: { memory: null }
+    # used to reload user from session & other features (e.g. switch_user)
+    app_user_provider:
+      entity:
+        class: App\Entity\User
+        property: email
+    # used to reload user from session & other features (e.g. switch_user)
+    # used to reload user from session & other features (e.g. switch_user)
+    # used to reload user from session & other features (e.g. switch_user)
   firewalls:
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
       security: false
     main:
       lazy: true
-      provider: users_in_memory
+      provider: app_user_provider
+      custom_authenticator: App\Security\UserAuthenticator
+      logout:
+        path: logout
+        # where to redirect after logout
+        target: home
 
       # activate different ways to authenticate
       # https://symfony.com/doc/current/security.html#the-firewall
@@ -23,8 +42,8 @@ security:
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
   access_control:
-    #- { path: ^/admin/home, roles: ROLE_ADMIN }
-    #- { path: ^/instructor/home, roles: ROLE_INSTRUCTOR }
+    # - { path: ^/admin/home, roles: ROLE_ADMIN }
+    # - { path: ^/instructor/home, roles: ROLE_INSTRUCTOR }
     # - { path: ^/student/home, roles: ROLE_STUDENT }
 
 when@test:
