--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -42,9 +42,13 @@ security:
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
   access_control:
-    # - { path: ^/admin/home, roles: ROLE_ADMIN }
-    # - { path: ^/instructor/home, roles: ROLE_INSTRUCTOR }
-    # - { path: ^/student/home, roles: ROLE_STUDENT }
+    - { path: ^/admin, roles: ROLE_ADMIN }
+    - { path: ^/instructor, roles: ROLE_INSTRUCTOR }
+    - { path: ^/student, roles: ROLE_STUDENT }
+
+  role_hierarchy:
+    ROLE_INSTRUCTOR: ROLE_STUDENT
+    ROLE_ADMIN: ROLE_STUDENT
 
 when@test:
   security:
