--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -9,6 +9,8 @@ security:
       algorithm: auto
     App\Entity\Users:
       algorithm: auto
+    App\Entity\Instructor:
+      algorithm: auto
 
   # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
   providers:
@@ -17,6 +19,12 @@ security:
       entity:
         class: App\Entity\User
         property: email
+    users:
+      entity:
+        class: App\Entity\User
+        property: email
+
+    # used to reload user from session & other features (e.g. switch_user)
     # used to reload user from session & other features (e.g. switch_user)
     # used to reload user from session & other features (e.g. switch_user)
     # used to reload user from session & other features (e.g. switch_user)
