--- a/.env
+++ b/.env
@@ -28,5 +28,5 @@ APP_SECRET=d4afaf2bdf1c5323cda4a7bc2257a150
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://root:@127.0.0.1:3306/ecoit?serverVersion=8.0&charset=utf8mb4"
-DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/ecoit?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
